test : (숫자 야구) 테스트 코드 asList에서 List.of() 코드 수정